[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/transition_background.png" type="Texture" id=1]
[ext_resource path="res://Scenes/CameraControl.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Transition.gd" type="Script" id=3]
[ext_resource path="res://Assets/joinha.png" type="Texture" id=4]
[ext_resource path="res://Assets/AlegreyaSansSC-ExtraBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/exp.png" type="Texture" id=6]
[ext_resource path="res://Assets/arm.png" type="Texture" id=7]
[ext_resource path="res://Assets/DiceFaceMaterial.tres" type="Material" id=9]
[ext_resource path="res://Assets/6_dots.png" type="Texture" id=10]
[ext_resource path="res://Assets/5_dots.png" type="Texture" id=11]
[ext_resource path="res://Assets/3_dots_blue.png" type="Texture" id=12]
[ext_resource path="res://Assets/4_dots.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sound/explosion.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/2_dots_blue.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sound/fanfare.wav" type="AudioStream" id=16]

[sub_resource type="QuadMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 10 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 15 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 11 )

[sub_resource type="SpatialMaterial" id=20]
albedo_texture = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=10]
albedo_texture = ExtResource( 13 )

[sub_resource type="SpatialMaterial" id=21]
albedo_texture = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=19]
albedo_texture = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=22]
albedo_texture = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=23]
albedo_texture = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=24]
albedo_texture = ExtResource( 12 )

[sub_resource type="DynamicFont" id=11]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=13]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 0.378929, 0.378929, 1 ),
"update": 0,
"values": [ Vector2( -90, 519 ), Vector2( -90, 519 ), Vector2( 418, 519 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -90, 519 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 1044, 119 ), Vector2( 1044, 119 ), Vector2( 618, 119 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1044, 119 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
resource_name = "Explode"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 5, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Transition" type="Spatial"]
script = ExtResource( 3 )
dices = [ NodePath("Mesh"), NodePath("Mesh2"), NodePath("Mesh3"), NodePath("Mesh4"), NodePath("Mesh5"), NodePath("Mesh6") ]

[node name="Mesh" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.96847, 0.5, -0.985481 )
visible = false

[node name="FaceUp" type="MeshInstance" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
material_override = ExtResource( 9 )
mesh = SubResource( 5 )
material/0 = null

[node name="FaceDown" type="MeshInstance" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="FaceRight" type="MeshInstance" parent="Mesh"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="FaceLeft" type="MeshInstance" parent="Mesh"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="FaceForward" type="MeshInstance" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 20 )

[node name="FaceBackward" type="MeshInstance" parent="Mesh"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 10 )

[node name="Mesh2" type="Spatial" parent="."]
transform = Transform( 0.0208053, -0.988291, 0.151157, 0.999779, 0.0210471, 0, -0.00318142, 0.151124, 0.98851, -5.9788, 0.5, 2.38112 )
visible = false

[node name="FaceUp" type="MeshInstance" parent="Mesh2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
material_override = ExtResource( 9 )
mesh = SubResource( 5 )
material/0 = null

[node name="FaceDown" type="MeshInstance" parent="Mesh2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="FaceRight" type="MeshInstance" parent="Mesh2"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="FaceLeft" type="MeshInstance" parent="Mesh2"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="FaceForward" type="MeshInstance" parent="Mesh2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 21 )

[node name="FaceBackward" type="MeshInstance" parent="Mesh2"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 10 )

[node name="Mesh3" type="Spatial" parent="."]
transform = Transform( 0.998121, 0.0612564, 0.00150884, 0, -0.024624, 0.999697, 0.061275, -0.997819, -0.0245777, -3.84507, 0.5, -1.01016 )
visible = false

[node name="FaceUp" type="MeshInstance" parent="Mesh3"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
material_override = ExtResource( 9 )
mesh = SubResource( 5 )
material/0 = null

[node name="FaceDown" type="MeshInstance" parent="Mesh3"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="FaceRight" type="MeshInstance" parent="Mesh3"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="FaceLeft" type="MeshInstance" parent="Mesh3"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="FaceForward" type="MeshInstance" parent="Mesh3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 19 )

[node name="FaceBackward" type="MeshInstance" parent="Mesh3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 10 )

[node name="Mesh4" type="Spatial" parent="."]
transform = Transform( 0.998603, 0.0528205, 0.00148648, 0, 0.0281309, -0.999604, -0.0528414, 0.998207, 0.0280916, -1.74788, 0.5, 2.35833 )
visible = false

[node name="FaceUp" type="MeshInstance" parent="Mesh4"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
material_override = ExtResource( 9 )
mesh = SubResource( 5 )
material/0 = null

[node name="FaceDown" type="MeshInstance" parent="Mesh4"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="FaceRight" type="MeshInstance" parent="Mesh4"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="FaceLeft" type="MeshInstance" parent="Mesh4"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="FaceForward" type="MeshInstance" parent="Mesh4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 22 )

[node name="FaceBackward" type="MeshInstance" parent="Mesh4"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 10 )

[node name="Mesh5" type="Spatial" parent="."]
transform = Transform( 0.0418112, 0.998836, -0.0240309, -0.999125, 0.0418233, 0, 0.00100505, 0.0240098, 0.999711, 1.11897, 0.5, -1.09768 )
visible = false

[node name="FaceUp" type="MeshInstance" parent="Mesh5"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
material_override = ExtResource( 9 )
mesh = SubResource( 5 )
material/0 = null

[node name="FaceDown" type="MeshInstance" parent="Mesh5"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="FaceRight" type="MeshInstance" parent="Mesh5"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="FaceLeft" type="MeshInstance" parent="Mesh5"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="FaceForward" type="MeshInstance" parent="Mesh5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 23 )

[node name="FaceBackward" type="MeshInstance" parent="Mesh5"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 10 )

[node name="Mesh6" type="Spatial" parent="."]
transform = Transform( -0.0328586, 0.0143383, 0.999357, 0, -0.999897, 0.014346, 0.99946, 0.00047139, 0.0328552, 5.50224, 0.5, 2.49332 )
visible = false

[node name="FaceUp" type="MeshInstance" parent="Mesh6"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
material_override = ExtResource( 9 )
mesh = SubResource( 5 )
material/0 = null

[node name="FaceDown" type="MeshInstance" parent="Mesh6"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="FaceRight" type="MeshInstance" parent="Mesh6"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="FaceLeft" type="MeshInstance" parent="Mesh6"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.5, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="FaceForward" type="MeshInstance" parent="Mesh6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 24 )

[node name="FaceBackward" type="MeshInstance" parent="Mesh6"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 10 )

[node name="Background" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
pixel_size = 0.03
texture = ExtResource( 1 )

[node name="Pitch" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
script = ExtResource( 2 )

[node name="Yaw" type="Spatial" parent="Pitch"]
transform = Transform( 1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Pitch/Yaw"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30 )
projection = 1
fov = 24.0
size = 15.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.73644, 0.441272, -0.512773, 0, 0.757975, 0.652284, 0.676503, -0.480367, 0.558203, 0, 35.1428, 0 )
light_energy = 0.5

[node name="UIController" type="CanvasLayer" parent="."]

[node name="ArmPivot" type="Control" parent="UIController"]
margin_left = -13.0
margin_top = -239.0
margin_right = 27.0
margin_bottom = -199.0

[node name="Arm" type="TextureRect" parent="UIController/ArmPivot"]
margin_left = 136.0
margin_top = 206.0
margin_right = 763.0
margin_bottom = 833.0
rect_rotation = 93.1057
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 7 )
expand = true

[node name="GameOver" type="ColorRect" parent="UIController"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.6 )

[node name="Label" type="Label" parent="UIController/GameOver"]
margin_left = 311.0
margin_top = 17.0
margin_right = 699.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 11 )
text = "Game Over!"

[node name="Label2" type="Label" parent="UIController/GameOver"]
margin_left = 555.0
margin_top = 234.0
margin_right = 943.0
margin_bottom = 420.0
custom_fonts/font = SubResource( 12 )
text = "Try again 
by pressing
any key!"

[node name="TextureRect" type="TextureRect" parent="UIController/GameOver"]
margin_left = -90.0
margin_top = 519.0
margin_right = 361.0
margin_bottom = 870.0
rect_rotation = -179.692
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIController/GameOver"]
anims/FadeIn = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="Victory" type="ColorRect" parent="UIController"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.6 )

[node name="Label" type="Label" parent="UIController/Victory"]
margin_left = 311.0
margin_top = 17.0
margin_right = 699.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 11 )
text = "Victory!"
align = 1

[node name="Label2" type="Label" parent="UIController/Victory"]
margin_left = 19.0
margin_top = 212.0
margin_right = 530.0
margin_bottom = 398.0
custom_fonts/font = SubResource( 12 )
text = "You finished the game with 10 turns remaining!"
autowrap = true

[node name="Label3" type="Label" parent="UIController/Victory"]
margin_left = 189.0
margin_top = 510.0
margin_right = 841.0
margin_bottom = 696.0
custom_fonts/font = SubResource( 12 )
text = "Press any key to restart!"

[node name="TextureRect" type="TextureRect" parent="UIController/Victory"]
margin_left = 1044.0
margin_top = 119.0
margin_right = 1495.0
margin_bottom = 470.0
rect_rotation = -0.557316
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIController/Victory"]
anims/FadeIn = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="Explosion" type="Sprite" parent="UIController"]
visible = false
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 6 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIController/Explosion"]
anims/Explode = SubResource( 17 )
anims/RESET = SubResource( 18 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -20.0

[node name="AudioFanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -15.0
